--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <junit.version>3.8.1</junit.version>
-        <servlet.api.version>6.0.0</servlet.api.version>
+        <servlet.api.version>4.0.1</servlet.api.version>
         <jsp.api.version>2.3.3</jsp.api.version>
+        <jstl.version>1.2</jstl.version>
     </properties>
 
     <dependencies>
@@ -26,10 +27,11 @@
 
         <!-- servlet-api -->
         <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
             <version>${servlet.api.version}</version>
         </dependency>
+
 
         <!-- jsp-api -->
         <dependency>
@@ -37,6 +39,14 @@
             <artifactId>javax.servlet.jsp-api</artifactId>
             <version>${jsp.api.version}</version>
         </dependency>
+
+        <!-- jstl -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
+        </dependency>
+
 
     </dependencies>
     <build>
